"""create gmail message detail table

Revision ID: 3f0703c9c5bf
Revises: bd6d29cb32aa
Create Date: 2024-10-24 01:15:02.812563

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = '3f0703c9c5bf'
down_revision: Union[str, None] = 'bd6d29cb32aa'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('message_detail',
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('message_id', sa.String(length=32), nullable=False),
    sa.Column('text_body', sa.Text(), nullable=True),
    sa.Column('html_body', sa.Text(), nullable=True),
    sa.ForeignKeyConstraint(['message_id'], ['gmail.message.message_id'], ),
    sa.PrimaryKeyConstraint('id'),
    schema='gmail'
    )
    op.create_index('idx_message_details_message_id', 'message_detail', ['message_id'], unique=True, schema='gmail')
    op.create_index(op.f('ix_gmail_message_detail_id'), 'message_detail', ['id'], unique=False, schema='gmail')
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_gmail_message_detail_id'), table_name='message_detail', schema='gmail')
    op.drop_index('idx_message_details_message_id', table_name='message_detail', schema='gmail')
    op.drop_table('message_detail', schema='gmail')
    # ### end Alembic commands ###
