"""create gmail message label table

Revision ID: 4a743557aab2
Revises: d40325d28363
Create Date: 2024-10-24 01:28:55.888040

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = '4a743557aab2'
down_revision: Union[str, None] = 'd40325d28363'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('message_label',
    sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.Column('message_id', sa.String(length=32), nullable=False),
    sa.Column('label_id', sa.String(length=32), nullable=False),
    sa.ForeignKeyConstraint(['label_id'], ['gmail.label.label_id'], ),
    sa.ForeignKeyConstraint(['message_id'], ['gmail.message.message_id'], ),
    sa.PrimaryKeyConstraint('id'),
    schema='gmail'
    )
    op.create_index('idx_message_label_label_id', 'message_label', ['label_id'], unique=False, schema='gmail')
    op.create_index('idx_message_label_message_id', 'message_label', ['message_id'], unique=False, schema='gmail')
    op.create_index(op.f('ix_gmail_message_label_id'), 'message_label', ['id'], unique=False, schema='gmail')
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_gmail_message_label_id'), table_name='message_label', schema='gmail')
    op.drop_index('idx_message_label_message_id', table_name='message_label', schema='gmail')
    op.drop_index('idx_message_label_label_id', table_name='message_label', schema='gmail')
    op.drop_table('message_label', schema='gmail')
    # ### end Alembic commands ###
