"""create gmail message attachment table

Revision ID: 96e2ed5bbe62
Revises: 4a743557aab2
Create Date: 2024-10-25 01:23:35.674303

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = '96e2ed5bbe62'
down_revision: Union[str, None] = '4a743557aab2'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('message_attachment',
    sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.Column('message_id', sa.String(length=32), nullable=False),
    sa.Column('file_name', sa.String(length=512), nullable=False),
    sa.Column('file_url', sa.String(length=4096), nullable=True),
    sa.Column('mime_type', sa.String(length=256), nullable=False),
    sa.Column('size', sa.Integer(), nullable=False),
    sa.Column('attachment_id', sa.String(length=1024), nullable=False),
    sa.ForeignKeyConstraint(['message_id'], ['gmail.message.message_id'], ),
    sa.PrimaryKeyConstraint('id'),
    schema='gmail'
    )
    op.create_index('idx_message_attachment_message_id', 'message_attachment', ['message_id'], unique=False, schema='gmail')
    op.create_index(op.f('ix_gmail_message_attachment_id'), 'message_attachment', ['id'], unique=False, schema='gmail')
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_gmail_message_attachment_id'), table_name='message_attachment', schema='gmail')
    op.drop_index('idx_message_attachment_message_id', table_name='message_attachment', schema='gmail')
    op.drop_table('message_attachment', schema='gmail')
    # ### end Alembic commands ###
