"""create workflow rule table

Revision ID: bd31ee380553
Revises: 751d4b0765b7
Create Date: 2024-10-25 06:40:09.138999

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = 'bd31ee380553'
down_revision: Union[str, None] = '751d4b0765b7'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('rule',
    sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.Column('name', sa.String(length=256), nullable=False),
    sa.Column('description', sa.String(length=512), nullable=True),
    sa.Column('predicate', sa.Enum('ANY', 'ALL', name='rule_predicate', schema='workflow'), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('name'),
    schema='workflow'
    )
    op.create_index('idx_filter_rule_name', 'rule', ['name'], unique=True, schema='workflow')
    op.create_index(op.f('ix_workflow_rule_id'), 'rule', ['id'], unique=False, schema='workflow')
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_workflow_rule_id'), table_name='rule', schema='workflow')
    op.drop_index('idx_filter_rule_name', table_name='rule', schema='workflow')
    op.drop_table('rule', schema='workflow')
    sa.Enum(name='rule_predicate', schema='workflow').drop(op.get_bind(), checkfirst=False)
    # ### end Alembic commands ###
