"""create workflow rule detail table

Revision ID: d427c5545332
Revises: bd31ee380553
Create Date: 2024-10-25 13:33:30.262752

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql
from sqlalchemy.dialects.postgresql import ENUM, UUID


# revision identifiers, used by Alembic.
revision: str = 'd427c5545332'
down_revision: Union[str, None] = 'bd31ee380553'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None

operation_enum = ENUM(
    'EQUALS', 'NOT_EQUALS', 'CONTAINS', 'NOT_CONTAINS',
    'LESS_THAN', 'GREATER_THAN', 'LESS_THAN_EQUALS',
    'GREATER_THAN_EQUALS', 'IN', 'NOT_IN',
    name='operation', schema='workflow', create_type=False
)

def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('rule_detail',
    sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.Column('rule_id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('field_name', sa.String(length=256), nullable=False),
    sa.Column('filter_field_id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('operation', operation_enum, nullable=False),
    sa.Column('value', sa.String(length=256), nullable=False),
    sa.Column('unit', sa.Enum('MINUTES', 'HOURS', 'DAYS', 'MONTHS', 'YEARS', name='field_unit', schema='workflow'), nullable=True),
    sa.ForeignKeyConstraint(['filter_field_id'], ['workflow.filter_field.id'], ),
    sa.ForeignKeyConstraint(['rule_id'], ['workflow.rule.id'], ),
    sa.PrimaryKeyConstraint('id'),
    schema='workflow'
    )
    op.create_index('idx_rule_detail_filter_field_id', 'rule_detail', ['filter_field_id'], unique=False, schema='workflow')
    op.create_index('idx_rule_detail_rule_id', 'rule_detail', ['rule_id'], unique=False, schema='workflow')
    op.create_index(op.f('ix_workflow_rule_detail_id'), 'rule_detail', ['id'], unique=False, schema='workflow')
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_workflow_rule_detail_id'), table_name='rule_detail', schema='workflow')
    op.drop_index('idx_rule_detail_rule_id', table_name='rule_detail', schema='workflow')
    op.drop_index('idx_rule_detail_filter_field_id', table_name='rule_detail', schema='workflow')
    op.drop_table('rule_detail', schema='workflow')
    sa.Enum(name='field_unit', schema='workflow').drop(op.get_bind(), checkfirst=False)
    # ### end Alembic commands ###
