"""create workflow rule action table

Revision ID: e10102ba7fc0
Revises: d427c5545332
Create Date: 2024-10-25 14:19:53.380095

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = 'e10102ba7fc0'
down_revision: Union[str, None] = 'd427c5545332'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('rule_action',
    sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.Column('rule_id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('action', sa.Enum('MOVE', 'MARK_AS_READ', 'MARK_AS_UNREAD', 'DELETE', 'FORWARD', name='action_type', schema='workflow'), nullable=False),
    sa.Column('value', sa.String(length=256), nullable=True),
    sa.ForeignKeyConstraint(['rule_id'], ['workflow.rule.id'], ),
    sa.PrimaryKeyConstraint('id'),
    schema='workflow'
    )
    op.create_index('idx_rule_action_rule_id', 'rule_action', ['rule_id'], unique=False, schema='workflow')
    op.create_index(op.f('ix_workflow_rule_action_id'), 'rule_action', ['id'], unique=False, schema='workflow')
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_workflow_rule_action_id'), table_name='rule_action', schema='workflow')
    op.drop_index('idx_rule_action_rule_id', table_name='rule_action', schema='workflow')
    op.drop_table('rule_action', schema='workflow')
    sa.Enum(name='action_type', schema='workflow').drop(op.get_bind(), checkfirst=False)
    # ### end Alembic commands ###
